<resources>
    <string name="app_name">LapakIn</string>
    <string name="recommend_text">Rekomendasi Untukmu</string>
    <string name="see_details">Lihat selengkapnya…</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Riset Pasar</string>
    <string name="sign_in_google">Masuk dengan Google</string>
    <string name="tagline">Cari lapak usaha? LapakIn aja ;)</string>
    <string name="lapak_details_title">Lapak</string>
    <string name="description_title">Deskripsi</string>
    <string name="show_more_message">Baca Selengkapnya</string>
    <string name="price">%s\nper bulan</string>
    <string name="lapak_sale_info">Luas : %s\nTipe : Sewa\nAlamat :\n%s</string>
    <string name="seller_title">Hubungi Penjual</string>
    <string name="title_profile">Profil</string>
    <string name="profile_email_title">Email</string>
    <string name="profile_preference_title">Preferensi Lapak</string>
    <string name="label">Jenis Usaha</string>
    <string name="city">Kota</string>
    <string name="subdistrict">Kecamatan</string>
    <string name="logout">Keluar</string>
    <string name="label_null">Belum Menentukan</string>
    <string name="label_coffee">Toko Kopi</string>
    <string name="label_clothes">Toko Baju</string>
    <string name="city_null">Belum Menentukan</string>
    <string name="city_north_jakarta">Jakarta Utara</string>
    <string name="city_south_jakarta">Jakarta Selatan</string>
    <string name="subdistrict_null">Belum Menentukan</string>
    <string name="subdistrict_kelapa_gading">Kelapa Gading</string>
    <string name="subdistrict_pademangan">Pademangan</string>
    <string name="subdistrict_penjaringan">Penjaringan</string>
    <string name="subdistrict_kebayoran_baru">Kebayoran Baru</string>
    <string name="subdistrict_pancoran">Pancoran</string>
    <string name="subdistrict_tebet">Tebet</string>
    <string name="label_title">Jenis Usaha</string>
    <string name="city_title">Kota</string>
    <string name="subdistrict_title">Kecamatan</string>
    <string name="logout_message">Keluar dari akun Anda?</string>
    <string name="logout_negative_button">Batal</string>
    <string name="logout_positive_button">Keluar</string>
    <string name="max_price_title">Harga Maksimum(opsional)</string>
    <string name="currency">Rp.</string>
    <string name="login_failed_message">Log in failed.</string>
    <string name="preference_main_message">Bagaimana lapak usaha yang Anda cari?</string>
    <string name="button_save_message">Simpan</string>
    <string name="input_empty_message">Mohon isi field-field yang ada terlebih dahulu.</string>
    <string name="database_url">https://lapakin-d5982-default-rtdb.asia-southeast1.firebasedatabase.app</string>
    <string name="save_buttom_message">Simpan</string>
    <string name="preference_save_message">Simpan data?</string>
    <string name="problem_encountered_home">Maaf, terjadi masalah koneksi ke server.</string>
    <string name="no_lapak_found">Tidak ada lapak yang ditemukan. Mohon mencoba dengan preferensi yang lain.</string>
    <string name="filter_all">Semua</string>
    <string name="filter_custom">Kustom</string>
    <string name="filter_preference">Rekomendasi Untukmu</string>
    <string name="button_filter_submit">Terapkan</string>
    <string name="max_price_title_normal">Harga Maksimum</string>
    <string name="market_research_page_title">Berita Terkini</string>
    <string name="end_of_list_news">Sudah mencapai berita terakhir</string>
</resources>

