<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomSheet.BottomSheetBehavior"
    android:paddingStart="55dp"
    android:paddingEnd="84dp"
    android:paddingBottom="38dp"
    android:paddingTop="22dp"
    >

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/drag_handle"
        android:layout_marginTop="34dp"
        >

        <RadioButton
            android:id="@+id/radio_button_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_all"
            android:textAppearance="@style/FilterBottomSheetTextAppearance"
            app:fontFamily="@font/rubik_regular"
            />
        <RadioButton
            android:id="@+id/radio_button_preference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_preference"
            android:textAppearance="@style/FilterBottomSheetTextAppearance"
            app:fontFamily="@font/rubik_regular"
            />
        <RadioButton
            android:id="@+id/radio_button_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_custom"
            android:textAppearance="@style/FilterBottomSheetTextAppearance"
            app:fontFamily="@font/rubik_regular"
            />
    </RadioGroup>

    <Button
        android:id="@+id/button_add_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintStart_toStartOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="@id/radio_group"
        app:layout_constraintBottom_toBottomOf="@id/radio_group"
        app:icon="@drawable/baseline_add_24"
        app:iconGravity="end"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/text_view_label_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_title"
            android:textAppearance="@style/Profile.FilterBottomSheet"
            app:fontFamily="@font/rubik_semi_bold"
            android:visibility="gone"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:endIconMode="dropdown_menu"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            android:visibility="gone"
            >

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/text_view_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_white"
                android:backgroundTintMode="src_over"
                android:fontFamily="@font/rubik_regular"
                android:inputType="none"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="12sp"
                app:fontFamily="@font/rubik_regular"
                android:textColor="@color/primary_black"
                android:completionThreshold="100"
                tools:text="Tidak ada" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_city_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_label"
            android:text="@string/city_title"
            android:textAppearance="@style/Profile.FilterBottomSheet"
            app:fontFamily="@font/rubik_semi_bold"
            android:layout_marginTop="13dp"
            android:visibility="gone"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_city_title"
            app:endIconMode="dropdown_menu"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            android:visibility="gone"

            >
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/text_view_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="none"
                android:backgroundTint="@color/primary_white"
                android:backgroundTintMode="src_over"
                tools:text="Tidak ada"
                app:fontFamily="@font/rubik_regular"
                android:fontFamily="@font/rubik_regular"
                android:textSize="12sp"
                android:textColor="@color/primary_black"
                android:completionThreshold="100"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_subdistrict_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subdistrict_title"
            android:textAppearance="@style/Profile.FilterBottomSheet"
            app:fontFamily="@font/rubik_semi_bold"
            android:layout_marginTop="18dp"
            android:visibility="gone"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_subdistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:endIconMode="dropdown_menu"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            android:visibility="gone"
            >
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/text_view_subdistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_white"
                android:backgroundTintMode="src_over"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:inputType="none"
                app:fontFamily="@font/rubik_regular"
                android:fontFamily="@font/rubik_regular"
                android:textSize="12sp"
                tools:text="Tidak ada"
                android:textColor="@color/primary_black"
                android:completionThreshold="100"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_max_price_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_subdistrict"
            android:text="@string/max_price_title"
            android:textAppearance="@style/Profile.FilterBottomSheet"
            app:fontFamily="@font/rubik_semi_bold"
            android:layout_marginTop="18dp"
            android:visibility="gone"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_max_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_max_price_title"
            app:endIconMode="clear_text"
            app:boxCornerRadiusTopStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:prefixText="@string/currency"
            app:prefixTextAppearance="@style/PrefixTextAppearance"
            android:visibility="gone"
            >
            <EditText
                android:id="@+id/edit_text_max_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:backgroundTint="@color/primary_white"
                android:backgroundTintMode="src_over"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:fontFamily="@font/rubik_regular"
                android:fontFamily="@font/rubik_regular"
                android:textSize="12sp"
                tools:text="1200000"
                android:textColor="@color/primary_black"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        android:text="@string/button_filter_submit"
        android:backgroundTint="@color/primary_light_red"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="25dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>