<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="30dp"
        tools:background="@drawable/page_background"
        tools:backgroundTint="@color/primary_black_85_alpha"
        tools:backgroundTintMode="src_atop"
        tools:context=".ui.profile.ProfileFragment">

        <ImageView
            android:id="@+id/image_view_profile_picture"
            android:layout_width="142dp"
            android:layout_height="142dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:drawablePadding="7dp"
            android:textAlignment="center"
            android:textAppearance="@style/ComponentTitleTextAppearance.Profile"
            android:theme="@style/Theme.LapakIn.Bold"
            app:drawableEndCompat="@drawable/baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_profile_picture"
            tools:text="Samuel Panggabean" />

        <TextView
            android:id="@+id/text_view_email_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/profile_email_title"
            android:textAppearance="@style/FilterButtonTextAppearance.Profile"
            android:theme="@style/Theme.LapakIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_name" />

        <TextView
            android:id="@+id/text_view_email_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="7dp"
            android:textAppearance="@style/FilterButtonTextAppearance.Profile"
            android:theme="@style/Theme.LapakIn.Regular"
            app:drawableEndCompat="@drawable/baseline_edit_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_email_title"
            tools:text="sampanggabean22@gmail.com" />

        <TextView
            android:id="@+id/text_view_user_preference"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/profile_preference_title"
            android:textAppearance="@style/FilterButtonTextAppearance.Profile"
            android:theme="@style/Theme.LapakIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_email_content" />

        <TextView
            android:id="@+id/text_view_label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/label_title"
            android:textAppearance="@style/Profile"
            app:fontFamily="@font/rubik_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_user_preference" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_label_title">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/text_view_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_white"
                android:backgroundTintMode="src_over"
                android:completionThreshold="100"
                android:fontFamily="@font/rubik_regular"
                android:inputType="none"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/primary_black"
                android:textSize="12sp"
                app:fontFamily="@font/rubik_regular"
                tools:text="Tidak ada" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_city_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/city_title"
            android:textAppearance="@style/Profile"
            app:fontFamily="@font/rubik_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_city_title"

            >

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/text_view_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_white"
                android:backgroundTintMode="src_over"
                android:completionThreshold="100"
                android:fontFamily="@font/rubik_regular"
                android:inputType="none"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/primary_black"
                android:textSize="12sp"
                app:fontFamily="@font/rubik_regular"
                tools:text="Tidak ada" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_subdistrict_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/subdistrict_title"
            android:textAppearance="@style/Profile"
            app:fontFamily="@font/rubik_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_city" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_subdistrict"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_subdistrict_title">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/text_view_subdistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_white"
                android:backgroundTintMode="src_over"
                android:completionThreshold="100"
                android:fontFamily="@font/rubik_regular"
                android:inputType="none"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/primary_black"
                android:textSize="12sp"
                app:fontFamily="@font/rubik_regular"
                tools:text="Tidak ada" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view_max_price_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/max_price_title"
            android:textAppearance="@style/Profile"
            app:fontFamily="@font/rubik_semi_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_subdistrict" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_max_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_max_price_title"
            app:prefixText="@string/currency"
            app:prefixTextAppearance="@style/PrefixTextAppearance">

            <EditText
                android:id="@+id/edit_text_max_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/primary_white"
                android:backgroundTintMode="src_over"
                android:fontFamily="@font/rubik_regular"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/primary_black"
                android:textSize="12sp"
                app:fontFamily="@font/rubik_regular"
                tools:text="1200000" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_logout"
            style="@style/LogoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/logout"
            android:textColor="@color/primary_white"
            android:theme="@style/Theme.LapakIn.Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_max_price"
            app:strokeColor="@color/primary_white"
            app:strokeWidth="3dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>